--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <header class="logo-header">
+        <img src="logo.png" alt="SHARDLAB" class="logo">
+    </header>
     <div class="container">
         <div class="menu-overlay">
             <ul class="menu-list">
